--- a/docker/www/hello2.html
+++ b/docker/www/hello2.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<h1>Hello Daniele again from Kubernetes!</h1>
+	<h1>Hello SMALLEG-5 again from Kubernetes!</h1>
 </body>
 </html>
