Update .html + fix deployment-2.yml

--- a/docker/www/hello.html
+++ b/docker/www/hello.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<h1>Hello SMALLEG-6 from Kubernetes!</h1>
+	<h1>Hello Daniele Gambino1 from Kubernetes!</h1>
 </body>
 </html>
